# python-project-lvl1

./: .codeclimate.yml  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: calc.py  cli.py  engine.py  even.py  exp_gen.py  game_engine.py  gcd_gen.py  help_function.py  num_gen.py  prime_gen.py  progr_gen.py  rights.py
brain_games/games/: __init__.py  calc.py  conditions.py  convert_str_to_num.py  even.py  expression.py  game_engine.py  gcd.py  prime.py  progression.py  rand_number.py  rights.py  show_rand_num.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
